Feat/recommended artists pagination (#161)
* feat: Pagination on recommended artists

Signed-off-by: jaivalis <johnaivalis@gmail.com>

* chore: CHANGELOG.md

Signed-off-by: jaivalis <johnaivalis@gmail.com>

* fix: use count

Signed-off-by: jaivalis <johnaivalis@gmail.com>

---------

Signed-off-by: jaivalis <johnaivalis@gmail.com>